# blog-engine

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  configuration.yaml  docker-compose.yml  go.mod  go.sum  main.go  modd.conf  sqlx-data.json
.github/workflows/: audit-on-push.yml  build-public.yaml  check.yml  general.yml  google-cloudrun-docker.yml  scheduled-audit.yml
cmd/exp/: exp.go  hello.gohtml
configuration/: base.yaml  production.yaml
controllers/: static.go
do-addition/: Cargo.toml  build.sh  index.html
do-addition/src/: lib.rs
do-addition/www/: index.html
do-nothing/: Cargo.toml
hurl/: Cargo.toml
hurl/src/: app.rs  main.rs
migrations/: 20220805072642_create_blogs_table.sql  20220808094929_create_category_table.sql
migrations/2021-12-11-102537_index_username/: down.sql
migrations/2021-12-13-235526_create_posts/: up.sql
migrations/2021-12-14-132106_create_comments/: up.sql
migrations/2022-06-05-042400_create_users/: up.sql
migrations/2022-06-05-114518_create_posts/: up.sql
migrations/2022-06-05-141936_create_comments/: up.sql
migrations/2022-07-04-043703_create_categories/: up.sql
migrations/2022-07-04-065620_create_posts/: up.sql
migrations/2022-07-06-010818_create_post/: up.sql
migrations/2022-07-06-021935_create_posts/: up.sql
migrations/2022-07-09-031005_add_users/: up.sql
posts/: ethereum-basics.md  implementing-elliptic-curve-in-rust.md  implementing-finite-field-arithmetic-in-rust.md
posts/Sign in with Solana/: post.md
posts/Understanding BItTorrent 3: Discover Peers/: post.md
posts/Understanding BitTorrent 1: A Deep Dive into Bencode/: post.md
posts/Understanding BitTorrent 2: A Deep dive into Tracker/: post.md
posts/Understanding BitTorrent 2: Parse torrent file/: post.md
scripts/: cargo_test.sh  init_db.sh
src/: auth.rs  configuration.rs  db.rs  errors.rs  graphql_schema.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  startup.rs
src/domain/: mod.rs  new_blog.rs  (+1 more)
tailwind/: package-lock.json  package.json  tailwind.config.js
templates/: about.gohtml  base.html  blog.gohtml  contact.gohtml  faq.gohtml  home.gohtml  post.html  tailwind.gohtml
tests/: blog.rs  health_check.rs  main.rs
views/: template.go
(+31 files in other folders)
