[package]
name = "defistory"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "defistory"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = "1.0.140"
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.15"
env_logger = "0.9"
log = "0.4"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = "0.11.11"