[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.0"
warp = "0.3.6"
env_logger = "0.10.0"
once_cell = "1.18.0"
actix-files = "0.6.2"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4.20"
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
markdown = "1.0.0-alpha.12"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
