[package]
name = "hurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
heck = "0.4.0"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11.7"
rpassword = "5.0.1"
